WEBEU-1268 Text for layers not readable in ID #4 fixed

--- a/css/app.css
+++ b/css/app.css
@@ -767,7 +767,8 @@ button.save.has-count .count::before {
     font-family: Helvetica-Neue-Bold;
     color: #333;
 }
-.telenav-body input[type="checkbox"], input[type="radio"] {
+.telenav-body input[type="checkbox"],
+.telenav-body input[type="radio"] {
     float: none;
     vertical-align: -1px;
 }
